Apply rule "Prefer java.nio.file.Path.of(java.lang.String,java.lang.String...)" Update "actionPerformed6(org.springframework.context.support.AivisSpeechRestApiJPanel,java.lang.Object)" method in "org.springframework.context.support.AivisSpeechRestApiJPanel" class Use "java.nio.file.Path.of(java.lang.String,java.lang.String...)" methodto replace usage of "java.nio.file.Paths.get(java.lang.String,java.lang.String...)" method